--- a/pages/myself/myself.wxss
+++ b/pages/myself/myself.wxss
@@ -8,6 +8,18 @@
   width: 100%;
   height: 400rpx;
 }
+.no_user{
+  background: #E2E2E2;
+  position: relative;
+}
+.no_user image{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 342rpx;
+  height: 290rpx;
+  transform: translate(-50%,0);
+}
 .my-bj{
   display: block;
   width: 100%;
