--- a/pages/single/user_single/user_single.wxml
+++ b/pages/single/user_single/user_single.wxml
@@ -46,7 +46,10 @@
       </view>
     </view>
   </view>
-  <view class="no-data" wx:if="{{!list.data.length}}">暂无数据</view>
+  <view class="no-data" wx:if="{{!list.data.length}}">
+    <image src="/images/no_data/no_list_data.png"></image>
+    <view>暂无数据</view>
+  </view>
 </view>
 <view class="comment_input" wx:if="{{is_comment}}">
   <form bindsubmit="formSubmitComment" class='form'>
