--- a/pages/friends/friends.wxml
+++ b/pages/friends/friends.wxml
@@ -1,9 +1,10 @@
 <view class="result">
-  <view class="recommend-list" wx:for="{{list.data}}" wx:key="unique">
+  <view class="recommend-list" wx:for="{{list.data}}" wx:key="unique" >
     <view bindtap="isVip" data-id="{{item.id}}">
       <view class="list-bj">
         <image src="{{item.imageUrl}}" mode="aspectFill"></image>
         <view class="certification_tag">
+          <!-- <text class="icon_ver "></text> -->
           <text class=" {{item.vipLevel == 1?'icon_ver':'icon_ver_not'}}"></text>
           <text>{{item.userAuth == 1?'已认证':'未认证'}}</text>
           <text>{{item.userAuth?'身份':''}}{{item.educationAuth?'-学历':''}}{{item.houseAuth?'-房':''}}{{item.carAuth?'-车':''}}</text>
@@ -13,7 +14,7 @@
           <text>交换微信</text>
         </view> -->
       </view>
-        
+      
       <view class="card-content">
         <view class='move_title'>{{item.realName}}
           <text class="lz-icon {{item.vipLevel == 1?'icon-certified':'icon-not-certified'}}"></text>
@@ -28,7 +29,6 @@
           <text>|</text>
           <text>{{annualIncomeArray[item.annualIncome]}}</text>
         </view>
-        
         <view class="name_introduct">{{item.selfIntroduce}}</view>
         <view class="go_more" wx:if="{{item.selfIntroduce}}">全文</view>
       </view>
