--- a/pages/introduction/introduction.wxss
+++ b/pages/introduction/introduction.wxss
@@ -149,6 +149,15 @@ page{
 }
 .detail_type{
  margin-right: 60rpx; 
+ position: relative;
+}
+.contact_tbn{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  left: 0;
+  top: 0;
 }
 .detail_type image{
   width: 90rpx;
