--- a/pages/music/index.wxml
+++ b/pages/music/index.wxml
@@ -5,12 +5,12 @@
 
 <view wx:if="{{is_match}}">
   <view class="content music">
-    <view class="list" wx:for="12345">
+    <view class="list" wx:for="12345" bindtap="clickPlayer">
       <view class="list_number fl">{{index+1}}</view>
       <view class="list-content fl">
         <view class="title">一定不要和格局</view>
         <view class="type-icon">
-          <view class="icon-box" bindtap="clickPlayer">
+          <view class="icon-box" >
             <icon class="player"></icon>
             <text>230</text>
           </view>
