--- a/pages/myself/myself.wxml
+++ b/pages/myself/myself.wxml
@@ -5,18 +5,18 @@
     <image class="my-bj" src="{{myself.imageUrl}}" wx:else mode="aspectFill"></image>
   </view>
   <view class="my-info">
-    <view class="list-cell">
+    <view class="list-cell" bindtap="goUrl" data-url="/pages/myself/introduction/introduction">
       <view class="my_detail fl">
-        <view class="my_name">{{myself.realName}}</view>
-        <view class="my_desc">
+        <view class="my_name">{{myself.realName?myself.realName:"暂未登录"}}</view>
+        <view class="my_desc" wx:if="{{myself.realName}}">
           <text>{{myself.sex?'男':'女'}}</text>
           <text>{{myself.age}}岁</text>
           <text>{{myself.constellation}}</text>
         </view>
       </view>
-      <navigator class="fr" url="/pages/myself/introduction/introduction" hover-class="none">
-        <text class="modify_detail">修改资料</text>
-      </navigator>
+      <view class="fr" >
+        <text class="modify_detail">{{myself.realName?"修改资料":"上传资料"}}</text>
+      </view>
     </view>
   </view>
   <view class="my-detail-box">
@@ -27,7 +27,7 @@
       <navigator class="list-cell" url="/pages/myself/member/member" hover-class="none">
         <text>会员服务</text>
       </navigator>
-      <view class="list-cell" bindtap="not_open_yet"> <text >我要置顶</text></view>
+      <view class="list-cell" bindtap="goUrl"> <text >我要置顶</text></view>
       <navigator class="list-cell" url="/pages/single/my_single/my_single" hover-class="none">
         <text>我的单身圈</text>
       </navigator>
