--- a/pages/single/release/release.wxss
+++ b/pages/single/release/release.wxss
@@ -55,6 +55,18 @@
   position: relative;
   display: inline-block;
 }
+.close{
+  position: absolute;
+  right: -15rpx;
+  top: -15rpx;
+  font-size: 30rpx;
+  color: #000;
+  width: 30rpx;
+  height: 30rpx;
+  border-radius: 50%;
+  line-height: 30rpx;
+  text-align: center;
+}
 .upload-list image{
   display: block;
   width: 100%;
