--- a/pages/music/index.wxml
+++ b/pages/music/index.wxml
@@ -5,22 +5,22 @@
 
 <view wx:if="{{is_match}}">
   <view class="content music">
-    <view class="list" wx:for="12345" bindtap="clickPlayer">
+    <view class="list" wx:for="{{audioList.data}}" wx:key="{{index}}" bindtap="clickPlayer" data-id="{{item.id}}">
       <view class="list_number fl">{{index+1}}</view>
       <view class="list-content fl">
-        <view class="title">一定不要和格局</view>
+        <view class="title">{{item.title}}</view>
         <view class="type-icon">
           <view class="icon-box" >
             <icon class="player"></icon>
-            <text>230</text>
+            <text>0</text>
           </view>
           <view class="icon-box" bindtap="clickMessage">
             <icon class="message"></icon>
-            <text>230</text>
+            <text>0</text>
           </view>
           <view class="icon-box" bindtap="clickCollect">
             <icon class="collect {{index%2?'collectend':''}}"></icon>
-            <text>230</text>
+            <text>0</text>
           </view>
         </view>
       </view>
@@ -29,14 +29,13 @@
 </view>
 <view wx:else>
   <view class="content">
-    <view class="video_list" wx:for="123">
-      <video id="myVideo_{{index}}" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" 
+    <view class="video_list" wx:for="{{videoList.data}}" wx:key="{{index}}">
+      <video id="myVideo_{{item.id}}" src="{{item.videoUrl}}" 
       danmu-list="{{danmuList}}" enable-danmu danmu-btn controls></video>
-      
         <view class="type-icon">
           <view class="icon-box" bindtap="clickMessage">
             <icon class="message"></icon>
-            <text>230</text>
+            <text>0</text>
           </view>
           <view class="icon-box" bindtap="clickMessage">
             <text>...</text>
